feat: support for proxies for temp mail

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@ IMAP_USER=
 IMAP_PASS=
 
 BROWSER_PATH=
+
+PROXY_URL=
+USE_NEKOBOX_IF_AVAILABLE=true
+# If you're using v2rayN instead of Nekobox change the value below to 10808
+NEKOBOX_PORT=2080  
