docs: enhance .env.example and README

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,28 @@
+# Whether to use temp email or not. Generally, if this is set to true, all other settings should be left as is.
 USE_TEMPMAIL=false
 
+# The domain of your mailserver. NOT the MX, just the domain, like email@example.com
 DOMAIN=
 
+# The prefix of the random email address that will be used in the registration process.
 EMAIL_ADDRESS_PREFIX=
 
+# The domain or IP of your mailserver. Usually just the MX record
 IMAP_SERVER=
+# The port of your mailserver. Usually 993
 IMAP_PORT=
+# The username of your mailserver. The central email address that the verification code will be routed to.
 IMAP_USER=
+# The password of the email address above.
 IMAP_PASS=
 
+# The path to your browser executable. Generally should left as is unless you know what you're doing.
 BROWSER_PATH=
 
+# The URL of the proxy server you want to use (used only in temp mail acquisition)
 PROXY_URL=
+
+# Whether to use Nekobox if it's available.
 USE_NEKOBOX_IF_AVAILABLE=true
 # If you're using v2rayN instead of Nekobox change the value below to 10808
 NEKOBOX_PORT=2080  
