feat: optionnaly disable browser sandboxing

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,8 @@ IMAP_PASS=
 
 # The path to your browser executable. Generally should left as is unless you know what you're doing.
 BROWSER_PATH=
+# Whether to disable browser sandboxing. Only disable if you know what you're doing.
+NO_SANDBOX=false
 
 # The URL of the proxy server you want to use (used only in temp mail acquisition)
 PROXY_URL=
