feat: optionally print the token and halt

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,6 @@ PROXY_URL=
 USE_NEKOBOX_IF_AVAILABLE=true
 # If you're using v2rayN instead of Nekobox change the value below to 10808
 NEKOBOX_PORT=2080  
+
+# Whether to not install the generated account to the local Cursor database.
+NO_INSTALL=false
